# GPL.cpp.lambda_calculus

./: README.md  lambda_calculus.hpp  short_begin.hpp  short_end.hpp
test/: CMakeLists.txt  lambda_calculus.test.cpp
